src/log/build_2023-11-09_13-07-34/pond3/stdout_stderr.log
running egg_info
writing ../build/pond3/pond3.egg-info/PKG-INFO
writing dependency_links to ../build/pond3/pond3.egg-info/dependency_links.txt
writing entry points to ../build/pond3/pond3.egg-info/entry_points.txt
writing requirements to ../build/pond3/pond3.egg-info/requires.txt
writing top-level names to ../build/pond3/pond3.egg-info/top_level.txt
reading manifest file '../build/pond3/pond3.egg-info/SOURCES.txt'
writing manifest file '../build/pond3/pond3.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /home/igor/Code/Modulo8/src/install/pond3/lib/python3.10/site-packages/pond3/chatbot.py to chatbot.cpython-310.pyc
  File "/home/igor/Code/Modulo8/src/install/pond3/lib/python3.10/site-packages/pond3/chatbot.py", line 3
    import .dictionary.intent
           ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/igor/Code/Modulo8/src/install/pond3/lib/python3.10/site-packages/pond3-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../build/pond3/pond3.egg-info to /home/igor/Code/Modulo8/src/install/pond3/lib/python3.10/site-packages/pond3-0.0.0-py3.10.egg-info
running install_scripts
writing list of installed files to '/home/igor/Code/Modulo8/src/build/pond3/install.log'
